fixed long title issue by truncating

--- a/app/assets/stylesheets/plots/_index.scss
+++ b/app/assets/stylesheets/plots/_index.scss
@@ -13,35 +13,33 @@
   display: flex;
   justify-content: right;
   align-items: center;
-  background-color: $duck-egg-blue;
-  color: white;
+  color: $dark-silver;
   margin-right: 24px;
   padding: 0px 16px;
   height: 2rem;
-  font-weight: 400;
-  font-size: 16px;
+  font-weight: 300;
+  font-size: 15px;
+  font-family: $headers-font;
 }
 
 .filter-button {
-  font-size: 16px;
   margin: 0px 8px;
   &:hover {
-    color:$dark-silver;
+    color:$duck-egg-blue;
     cursor: pointer;
-    }
+  }
 }
 
 .filter-search-bar {
-width: 400px;
+width: 100%;
 border-radius: 0;
-margin: 0px 0px 0px 16px;
 }
 
 #show-all {
-  color: white;
+  color: $dark-silver;
 }
 
 #show-all:hover{
   text-decoration: none !important;
-  color: $dark-silver;
+  color: $duck-egg-blue;
 }
